--- a/config_src/CMakeLists.txt
+++ b/config_src/CMakeLists.txt
@@ -1,36 +1,30 @@
 # solo_driver
 list(APPEND _solo_files
-  solo_driver/atmos_ocean_fluxes.F90
-  solo_driver/MESO_surface_forcing.F90
-  solo_driver/MOM_surface_forcing.F90
-  solo_driver/Neverland_surface_forcing.F90
-  solo_driver/user_surface_forcing.F90)
-set(_solo_driver solo_driver/MOM_driver.F90)
-
-if(MOM6SOLO)
-  set(exeName "mom6solo.x")
-  add_executable(${exeName} ${_solo_files} ${_solo_driver})
-  add_dependencies(${exeName} mom6::mom6)
-  target_link_libraries(${exeName} PUBLIC mom6::mom6)
-  list(APPEND EXE_TARGETS ${exeName})
-endif()
+  ${CMAKE_CURRENT_SOURCE_DIR}/solo_driver/atmos_ocean_fluxes.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/solo_driver/MESO_surface_forcing.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/solo_driver/MOM_surface_forcing.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/solo_driver/Neverland_surface_forcing.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/solo_driver/user_surface_forcing.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/solo_driver/MOM_driver.F90)
 
 # ice_solo_driver
 list(APPEND _ice_solo_files
-  ice_solo_driver/MOM_surface_forcing.F90
-  ice_solo_driver/atmos_ocean_fluxes.F90
-  ice_solo_driver/user_surface_forcing.F90)
-set(_ice_solo_driver ice_solo_driver/ice_shelf_driver.F90)
+  ${CMAKE_CURRENT_SOURCE_DIR}/ice_solo_driver/MOM_surface_forcing.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/ice_solo_driver/atmos_ocean_fluxes.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/ice_solo_driver/user_surface_forcing.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/ice_solo_driver/ice_shelf_driver.F90)
 
-if(MOM6SIS2)
-  set(exeName "mom6sis2.x")
-  add_executable(${exeName} ${_ice_solo_files} ${_ice_solo_driver})
-  add_dependencies(${exeName} mom6::mom6)
-  target_link_libraries(${exeName} PUBLIC mom6::mom6)
-  list(APPEND EXE_TARGETS ${exeName})
-endif()
+# nuopc_driver
+list(APPEND _nuopc_files
+  ${CMAKE_CURRENT_SOURCE_DIR}/nuopc_driver/mom_cap.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/nuopc_driver/mom_cap_methods.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/nuopc_driver/mom_cap_time.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/nuopc_driver/mom_ocean_model_nuopc.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/nuopc_driver/mom_surface_forcing_nuopc.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/nuopc_driver/ocn_comp_NUOPC.F90
+  ${CMAKE_CURRENT_SOURCE_DIR}/nuopc_driver/time_utils.F90)
 
-if(EXE_TARGETS)
-  install(TARGETS ${EXE_TARGETS}
-  RUNTIME DESTINATION bin COMPONENT Applications)
-endif()
+# Send these files upstream as mom6_<application>_files
+set(mom6_solo_files ${_solo_files} PARENT_SCOPE)
+set(mom6_ice_solo_files ${_ice_solo_files} PARENT_SCOPE)
+set(mom6_nuopc_files ${_nuopc_files} PARENT_SCOPE)
