FMS is actually libFMS
Change-Id: I9cc2221b2e24b37976922ff8822d4877efbc8185

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ endif()
 
 find_package(NetCDF REQUIRED COMPONENTS Fortran)
 find_package(gsw REQUIRED COMPONENTS STATIC)
-find_package(fms REQUIRED)
+find_package(libFMS REQUIRED)
 
 if(OPENMP)
   find_package(OpenMP REQUIRED COMPONENTS Fortran)
@@ -56,7 +56,7 @@ set_target_properties(${libName} PROPERTIES Fortran_MODULE_DIRECTORY
                                             ${moduleDir})
 
 target_link_libraries(${libName} PUBLIC gsw::gsw_static
-                                        fms::fms_8
+                                        libFMS::fms_r8
                                         NetCDF::NetCDF_Fortran)
 
 target_include_directories(${libName} PUBLIC
